made nav bar sticky, disabled scrolling, fixed some alignment of text and sizes of carousels

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,6 +1,22 @@
-#carousel-one {
+#carousel-story {
   width: auto;
-  height: auto;
+  height: 80vh;
+  margin: 0 auto;
+  h1 {
+    font-size: 32px;
+  }
+  p {
+    font-size: 24px;
+    font-style: italic;
+  }
+  h1, p {
+    text-shadow: 2px 2px black;
+  }
+}
+
+#carousel-team {
+  width: auto;
+  height: 80vh;
   margin: 0 auto;
   h1 {
     font-size: 32px;
