--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,9 @@
 .nav-section {
   background-color: #0A0C0D;
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  width: 100%;
   .nav-bar-top {
     display: flex;
     align-items: center;
