--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,22 +2,27 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body {
+body, html {
   margin: 0;
   padding: 0;
   color: white;
+  height: 100%;
+  overflow: hidden;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)), url('brick-wall.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .page {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)), url('brick-wall.jpg');
-  background-size: cover;
-  height: auto;
-  width: auto;
+  height: 100%;
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 .container {
+  margin-top: 144px;
   padding-top: 16px;
 }
 
@@ -27,6 +32,6 @@ body {
 }
 
 .menu {
-  height: 80vh;
+  height: 70vh;
   width: 100%;
 }
