--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -5,3 +5,7 @@
 .form {
   color: black;
 }
+
+.review {
+  text-align: left;
+}
